# aur_scan

./: Cargo.toml  LICENSE-MIT  PLAN.md  README.md  install.sh
data/: iocs.toml  package_list.txt
src/: baseline.rs  bash.rs  input.rs  lib.rs  main.rs  model.rs  output.rs  rules.rs  scanner.rs  update.rs
tests/: cli.rs  corpus.rs  install.sh
tests/corpus/: README.md
tests/corpus/android-udev-git/: .SRCINFO
tests/corpus/chromium-snapshot-bin/: .SRCINFO  PKGBUILD
tests/corpus/firefox-beta-bin/: .SRCINFO  PKGBUILD
tests/corpus/firefox-nightly/: .SRCINFO  PKGBUILD
tests/corpus/librewolf-bin/: .SRCINFO  PKGBUILD
tests/corpus/nautilus-dropbox/: .SRCINFO
tests/corpus/pamac-aur/: .SRCINFO
tests/corpus/rar/: .SRCINFO
tests/corpus/sublime-text-dev/: .SRCINFO
tests/corpus/tor-browser-bin/: PKGBUILD
